--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -17,14 +17,25 @@ server {
 	ssl_certificate_key /etc/ssl/private/jaekim.42.fr.key;
 
 	# Set root dir of server
-	root /var/www/html;
+	root /var/www/html/;
 
 	# Auto index
-	index index.html index.htm index.nginx-debian.html;
+	index index.html index.htm index.nginx-debian.html index.php;
 
 	server_name localhost;
 
 	location / {
+		autoindex on;
 		try_files $uri $uri/ =404;
+	}
+
+	location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass 172.17.0.3:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
 	}
 }
