--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,10 +1,9 @@
 FROM debian:buster 
 
-RUN apt-get update -y
-RUN apt-get upgrade -y
-RUN apt-get install nginx -y
-RUN apt-get install openssl -y
-RUN apt-get install vim -y
+RUN apt-get update -y && apt-get upgrade -y && \
+	apt-get	install nginx -y \
+					openssl \
+					vim
 
 COPY    conf/nginx.conf /etc/nginx/sites-available/default
 
