--- a/mine/srcs/requirements/nginx/conf/nginx.conf
+++ b/mine/srcs/requirements/nginx/conf/nginx.conf
@@ -1,5 +1,6 @@
 ## srcs/requirements/nginx/conf/nginx.conf
 
+# 이거 없어도 될거 같은데...
 server {
 	listen 80;
 	listen [::]:80;
@@ -11,18 +12,18 @@ server {
 	listen 443 ssl;
 	listen [::]:443 ssl;
 
+	server_name jaekim.42.fr;
+
 	# ssl setting
 	ssl on;
 	ssl_certificate /etc/ssl/certs/jaekim.42.fr.crt;
 	ssl_certificate_key /etc/ssl/private/jaekim.42.fr.key;
 
 	# Set root dir of server
-	root /var/www/html/;
+	root /var/www/html/wordpress;
 
 	# Auto index
 	index index.html index.htm index.nginx-debian.html index.php;
-
-	server_name localhost;
 
 	location / {
 		autoindex on;
