--- a/mine/srcs/.env
+++ b/mine/srcs/.env
@@ -1,7 +1,7 @@
 # MYSQL
 MYSQL_DATABASE=mariadb
 MYSQL_ROOT=root
-MYSQL_ROOT_PASSWORD=5678
+MYSQL_ROOT_PASSWORD=1234
 MYSQL_USER=jaekim
 MYSQL_PASSWORD=1234
 
@@ -20,3 +20,4 @@ WORDPRESS_LANG=ko_KR
 WORDPRESS_USER=jaekim
 WORDPRESS_PASSWORD=1234
 WORDPRESS_EMAIL=jaekim@student.42seoul.kr
+DOMAIN_NAME=https://jaekim.42.fr
