--- a/mine/srcs/requirements/nginx/conf/nginx.conf
+++ b/mine/srcs/requirements/nginx/conf/nginx.conf
@@ -1,6 +1,4 @@
-## srcs/requirements/nginx/conf/nginx.conf
 
-# 이거 없어도 될거 같은데...
 server {
 	listen 80;
 	listen [::]:80;
@@ -12,8 +10,6 @@ server {
 	listen 443 ssl;
 	listen [::]:443 ssl;
 
-	server_name jaekim.42.fr;
-
 	# ssl setting
 	ssl on;
 	ssl_certificate /etc/ssl/certs/jaekim.42.fr.crt;
@@ -24,6 +20,8 @@ server {
 
 	# Auto index
 	index index.html index.htm index.nginx-debian.html index.php;
+
+	server_name localhost;
 
 	location / {
 		autoindex on;
