FEAT: 워드프레스와 마리아디비 연동 성공

--- a/mine/srcs/requirements/nginx/conf/nginx.conf
+++ b/mine/srcs/requirements/nginx/conf/nginx.conf
@@ -21,7 +21,10 @@ server {
 	# Auto index
 	index index.html index.htm index.nginx-debian.html index.php;
 
-	server_name localhost;
+	# server_name localhost;
+	# 밑에 것도 됨
+	server_name jaekim.42.fr;
+
 
 	location / {
 		autoindex on;
