--- a/mine/srcs/requirements/wordpress/Dockerfile
+++ b/mine/srcs/requirements/wordpress/Dockerfile
@@ -13,10 +13,8 @@ RUN     apt-get update -y && apt-get upgrade -y && \
                         sudo
 
 COPY	./tools/wordpress_setup.sh /tmp/wordpress_setup.sh
-RUN     chmod +x /tmp/wordpress_setup.sh
 COPY	./conf/www.conf /etc/php/7.3/fpm/pool.d/www.conf
-
-RUN	wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && chmod +x wp-cli.phar && mv wp-cli.phar /usr/bin/wp
+COPY	./tools/wp-config.php /tmp/wp-config.php
 
 WORKDIR	/var/www/html/wordpress
 RUN	mkdir -p /run/php
