--- a/submit/srcs/requirements/nginx/conf/nginx.conf
+++ b/submit/srcs/requirements/nginx/conf/nginx.conf
@@ -12,6 +12,7 @@ server {
 
 	# ssl setting
 	ssl on;
+	ssl_protocols TLSv1.2 TLSv1.3;
 	ssl_certificate /etc/ssl/certs/jaekim.42.fr.crt;
 	ssl_certificate_key /etc/ssl/private/jaekim.42.fr.key;
 
